--- a/index/index.html
+++ b/index/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<!-- Once there is more content this page will be modified to include menu or other information to welcome people with intro to materials included --><title>MekongChristian</title>
+<html lang="en">
+<head>
+  <title>MekongChristian</title>
 
-<!--<meta http-equiv="refresh" content="0; url=GodsLove.html">-->
-<meta http-equiv="refresh" content="0; url=contents.html">
-<meta content="text/html; charset=UTF-8" http-equiv="content-type">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="../css/mobile.css" rel="stylesheet">
+  <meta http-equiv="refresh" content="0; url=contents.html">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+
+  <!-- ✅ Link your CSS -->
+  <link href="../css/mobile.css" rel="stylesheet">
+
+  <!-- ✅ PWA Support -->
+  <link rel="manifest" href="/manifest.json">
+  <link rel="icon" href="/icon-192.png">
 </head>
 <body>
-<div class="content">
-<h2>MekongChristian</h2>
-<dl>
-<dt>Starting . . .</dt>
-<dd>If not started automatically, <a href="contents.html">click
-here</a> </dd>
-</dl>
-</div>
-    <script>
+  <div class="content">
+    <h2>MekongChristian</h2>
+    <dl>
+      <dt>Starting . . .</dt>
+      <dd>If not started automatically, <a href="contents.html">click here</a></dd>
+    </dl>
+  </div>
+
+  <!-- ✅ Service Worker -->
+  <script>
     if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/sw.js')
-      .then(reg => console.log('Service Worker registered', reg))
-      .catch(err => console.error('Service Worker registration failed', err));
+      navigator.serviceWorker.register('/sw.js')
+        .then(reg => console.log('Service Worker registered', reg))
+        .catch(err => console.error('Service Worker registration failed', err));
     }
-    </script>
-<script type="text/javascript" src="cordova-2.5.0.js">
-<script type="text/javascript" src="js/index.js"/>
-<script type="text/javascript">
-app.initialize();
-</script>
-</body></html>
+  </script>
+</body>
+</html>
