Fix manifest and service worker links

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
     <!-- Link to the manifest file -->
   <link rel="manifest" href="/manifest.json">
+  
+    <!-- ✅ PWA Support -->
+  <link rel="manifest" href="/manifest.json">
+  <link rel="icon" href="/icon-192.png">
 
 </head>
 <body>
