--- a/index/index.html
+++ b/index/index.html
@@ -11,9 +11,9 @@
   <!-- ✅ Link your CSS -->
   <link href="../css/mobile.css" rel="stylesheet">
 
-  <!-- ✅ PWA Support -->
-  <link rel="manifest" href="/manifest.json">
-  <link rel="icon" href="/icon-192.png">
+  //<!-- ✅ PWA Support -->
+  //<link rel="manifest" href="/manifest.json">
+  //<link rel="icon" href="/icon-192.png">
 </head>
 <body>
   <div class="content">
@@ -25,12 +25,12 @@
   </div>
 
   <!-- ✅ Service Worker -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js')
-        .then(reg => console.log('Service Worker registered', reg))
-        .catch(err => console.error('Service Worker registration failed', err));
-    }
-  </script>
+  //<script>
+  //  if ('serviceWorker' in navigator) {
+  //    navigator.serviceWorker.register('/sw.js')
+  //      .then(reg => console.log('Service Worker registered', reg))
+  //      .catch(err => console.error('Service Worker registration failed', err));
+  //  }
+  //</script>
 </body>
 </html>
